--- a/package.json
+++ b/package.json
@@ -16,13 +16,19 @@
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
     "@angular/forms": "~8.2.0",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@types/chart.js": "^2.9.0",
     "angular-font-awesome": "^3.1.2",
+    "angular2-chartjs": "^0.5.1",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.2",
+    "chartjs-plugin-annotation": "^0.5.7",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "font-awesome": "^4.7.0",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
